@@ -1,3 +1,11 @@
+2007-04-04  Elijah Newren  <newren gmail com>
+
+	* src/window.c (meta_window_move_resize_internal): send synthetic
+	configurenotify events also in response to MapRequest events when
+	the window has a frame and the application specifies PPosition or
+	UPosition hints.  I believe they are already sent for all other
+	cases.  Should fix #322840.  Fixes the testcase at least.  :)
+
 2007-01-29  Thomas Thurman  <thomas@thurman.org.uk>
 
         * configure.in: post-release bump to 2.16.8
